--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html>
+
 <head>
 <link rel="stylesheet" href="styles.css" />
 <title>Aluraflix</title>
@@ -7,10 +9,19 @@
 <header>ALURAFLIX</header>
 
 
+<div>
 <h1>Jujutsu Kaisen 0 | Trailer Dublado</h1>
 <p>#jujutsukaisen0</p>
+</div>
 
 
-
+<div>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/359noIH-wNo?si=-0-z8adDmeb3g6s2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
+</div>
+
+
+
+
+
+  </html>
