--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <header>ALURAFLIX</header>
 
 
-<div>
+<section>
+<div class="chamada-texto">
 <h1>Jujutsu Kaisen 0 | Trailer Dublado</h1>
 <p>#jujutsukaisen0</p>
 </div>
