--- a/index.html
+++ b/index.html
@@ -1,28 +1,41 @@
-<html>
+<html lang="pt-BR">
 
 <head>
-<link rel="stylesheet" href="styles.css" />
-<title>Aluraflix</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
+    <title>Guiminamflix</title>
 </head>
 
 <body>
-<header>ALURAFLIX</header>
+    <header>GUIMINAMFLIX</header>
 
+    <section class="chamada">
+        <div class="chamada-texto">
+            <h1>Jujutsu Kaisen 0 | Trailer Dublado</h1>
+            <p>#jujustukaisen0</p>
+        </div>
 
-<section>
-<div class="chamada-texto">
-<h1>Jujutsu Kaisen 0 | Trailer Dublado</h1>
-<p>#jujutsukaisen0</p>
-</div>
+        <div>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/359noIH-wNo?si=L06bRWkcU80i33dq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        
+        </div>
+    </section>
 
+    <section class="categoria">
+        <h2>Filmes e séries</h2>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
 
-<div>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/359noIH-wNo?si=-0-z8adDmeb3g6s2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
+                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+       </a>
+        </div>
+    </section>
+
 </body>
-</div>
 
-
-
-
-
-  </html>
+</html>
