--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
 </head>
 
 <body>
-    <header>ALURAFLIX</header>
+    <header>GUIMINAMFLIX</header>
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>Jujutsu Kaisen 0 | Trailer Dublado</h1>
-            <p>#jujustukaisen0</p>
+            <h1>ATRAVÉS DO ARANHAVERSO</h1>
+            <p>#homem-aranha</p>
         </div>
 
         <div>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/359noIH-wNo?si=L06bRWkcU80i33dq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
@@ -29,10 +31,8 @@
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
-
-                <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
                 <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
-       </a>
+         </a>
         </div>
     </section>
 
